# SOIS-Template

./: .gitmodules  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Source/: CMakeLists.txt  main.cpp
